# FIleSystems2025

./: Readme.md
bind_mount/: CMakeLists.txt  Readme.md  test.sh
bind_mount/include/: bind_mount.h
bind_mount/src/: bind_mount.c  main.c
ext2_parsing/: Readme.md
ext2_parsing/src/: CMakeLists.txt  main.c  parse.c  parse.h
fat16_parsing/: Readme.md  create_fat_img.sh  example_output
fat16_parsing/resources/non_empty/: big.txt
fat16_parsing/src/: CMakeLists.txt  main.c  parse.c  parse.h
lsof/: CMakeLists.txt  Readme.md
lsof/include/: lsof.h  utils.h
lsof/src/: lsof.c  main.c  utils.c
